--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,11 +49,36 @@ jobs:
             thiagodecasantiago/api-produto:latest
             thiagodecasantiago/api-produto:v${{ github.run_number }}
 
-#  CD:
+  CD:
     # The type of runner that the job will run on
-#    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
+    needs: [CI]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
- #   steps:
+    steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
- #     - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+
+      - name: Kubernetes set context
+        uses: Azure/k8s-set-context@v1
+        with:
+          # Kubernetes Config
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+ 
+      - name: Deploy MongoDB 
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          # Path to the manifest files which will be used for deployment.
+          manifests: |
+            k8s/mongodb/deployment.yaml
+            k8s/mongodb/service.yaml            
+    
+      - name: Deploy API
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          # Path to the manifest files which will be used for deployment.
+          manifests: |
+            k8s/api/deployment.yaml
+            k8s/api/service.yaml            
+          # Fully qualified resource URL of the image(s) to be used for substitutions on the manifest files Example: contosodemo.azurecr.io/helloworld:test
+          images: thiagodecasantiago/api-produto:v${{ github.run_number }}
