--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  
+env:
+  GKE_CLUSTER: cluster-1    # Add your cluster name here.
+  GKE_ZONE: us-east4-c   # Add your cluster zone here.
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -59,11 +63,19 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Kubernetes set context
-        uses: Azure/k8s-set-context@v1
+      - name: Get GKE Credentials
+        # You may pin to the exact commit or the version.
+        # uses: google-github-actions/get-gke-credentials@fb08709ba27618c31c09e014e1d8364b02e5042e
+        uses: google-github-actions/get-gke-credentials@v0.2.1
         with:
-          # Kubernetes Config
-          kubeconfig: ${{secrets.K8S_CONFIG}}
+          # Optional service account key to use for authentication to GKE. This should be the JSON 
+          # formatted private key which can be exported from the Cloud Console. The
+          # value can be raw or base64-encoded.
+          credentials: ${{ secrets.GKE_SA_KEY }}
+          # Name of the cluster to get credentials for.
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          # Location (Region/Zone) for the cluster.
+          location: ${{ env.GKE_ZONE }}
  
       - name: Deploy MongoDB 
         uses: Azure/k8s-deploy@v1.3
